--- a/open_positions.html
+++ b/open_positions.html
@@ -23,6 +23,14 @@
  background-color: blue;
  color: #ffffff;
 }
+          /* Styles pour le cadre */
+        .cadre {
+            border: 2px solid black; /* Couleur et épaisseur de la bordure */
+            padding: 10px; /* Espace intérieur du cadre */
+            width: 80%; /* Largeur du cadre */
+            margin: 0 auto; /* Centrer le cadre horizontalement */
+        }
+    </style>
 </style>
 </head>
 
@@ -53,7 +61,7 @@
     <div id="site_content2">
        <div id="content">
     <h2>No position available. Stay tuned!</h2>  
-   <--
+   <!--
         <h2>Ph.D subjects 2021</h2>
         <font size="3">
           <ol>
@@ -71,7 +79,7 @@
           </ol>
         </font>
          -->
-    <h2>Call of Papers</h2>  
+    <h2>Call for Papers</h2>  
     <h1>Special Issue : Machine Learing for HealthCare - IPTA 2024</h1>  
 
     <h3>Leaders</h3> 
@@ -80,6 +88,11 @@
 
     Anass Nouri, SETIME Laboratory, Faculty of Science, Ibn Tofail University, Kenitra, Morocco, anass.nouri@uit.ac.ma
     </h4>
+
+<div class="cadre">
+    <p> 
+
+
 The advent of machine learning, and in particular deep learning, after the preeminence of expert systems has revolutionized the healthcare sector. Clinically, from the initial care, through diagnostic assistance and surgery (reducing surgeons' time and effort by 80%), to the payment of fees, machine learning algorithms in the healthcare field are garnering increasing interest ($3 trillion invested in medical startups in the first 6 months of 2022 and nearly $10 trillion in 2021 [Rock Health Investment]) and are revolutionizing it. In research and development, machine learning is becoming essential in many sectors such as drug design and realization, understanding diseases, and particularly the cause of their manifestation, their monitoring, and how prevent them.
 
 The aim of this special issue is to present the forefront of machine learning applications in healthcare. It targets professionals, researchers, and specialists who are actively merging the paths of healthcare with machine and deep learning technology, with a focus on refining algorithms, architectures, and their real-world applications in the health sector.
@@ -96,6 +109,8 @@ Human-machine interactions
 AI applications in health and wellness systems
 Personalized treatment predictions
 Ethics and regulations in AI for health
+          </p>
+</div>
      
       </div>
     <div id="footer">
