--- a/open_positions.html
+++ b/open_positions.html
@@ -80,14 +80,14 @@
         </font>
          -->
     <h2>Call for Papers</h2>  
-    <h1>Special Issue : Machine Learing for HealthCare - IPTA 2024</h1>  
+    <h3>Special Issue : Machine Learing for HealthCare - IPTA 2024</h3>  
 
-    <h3>Leaders</h3> 
-     <h4>
-    Youssef Mourchid, CESI LINEACT, CESI, Dijon, France, ymourchid@cesi.fr
+    <h4>Leaders</h4> 
+     <h5>
+    Youssef Mourchid, CESI LINEACT, CESI, Dijon, France, ymourchid@cesi.fr </br>
 
     Anass Nouri, SETIME Laboratory, Faculty of Science, Ibn Tofail University, Kenitra, Morocco, anass.nouri@uit.ac.ma
-    </h4>
+    </h5>
 
 <div class="cadre">
     <p> 
@@ -111,7 +111,7 @@ Personalized treatment predictions
 Ethics and regulations in AI for health
           </p>
 </div>
-     
+<h6>For more informations : https://ipta-conference.com/ipta24/index.php/special-sessions#MLH</h6>
       </div>
     <div id="footer">
       <p><a href="index.html">Home</a> | <a href="research.html">Research</a> | <a href="publications.html">Publications</a> | <a href="courses.html">Courses</a> </p>
