--- a/open_positions.html
+++ b/open_positions.html
@@ -91,7 +91,7 @@
     </h5>
        </br>
 <div class="cadre">
-    <p> 
+    <p style="font-size: 20px;> 
 
 
 The advent of machine learning, and in particular deep learning, after the preeminence of expert systems has revolutionized the healthcare sector. Clinically, from the initial care, through diagnostic assistance and surgery (reducing surgeons' time and effort by 80%), to the payment of fees, machine learning algorithms in the healthcare field are garnering increasing interest ($3 trillion invested in medical startups in the first 6 months of 2022 and nearly $10 trillion in 2021 [Rock Health Investment]) and are revolutionizing it. In research and development, machine learning is becoming essential in many sectors such as drug design and realization, understanding diseases, and particularly the cause of their manifestation, their monitoring, and how prevent them.
