--- a/open_positions.html
+++ b/open_positions.html
@@ -84,11 +84,11 @@
 
     <h4>Leaders</h4> 
        </br>
-     <h5>
+     <p style="font-size: 20px;>
     Youssef Mourchid, CESI LINEACT, CESI, Dijon, France, ymourchid@cesi.fr </br>
 
     Anass Nouri, SETIME Laboratory, Faculty of Science, Ibn Tofail University, Kenitra, Morocco, anass.nouri@uit.ac.ma
-    </h5>
+    <p >
        </br>
 <div class="cadre">
     <p style="font-size: 20px;> 
