--- a/open_positions.html
+++ b/open_positions.html
@@ -112,7 +112,8 @@ Personalized treatment predictions
 Ethics and regulations in AI for health
           </p>
 </div>
-<h6>For more informations : https://ipta-conference.com/ipta24/index.php/special-sessions#MLH</h6>
+       </br>
+<p>For more informations : https://ipta-conference.com/ipta24/index.php/special-sessions#MLH</p>
       </div>
     <div id="footer">
       <p><a href="index.html">Home</a> | <a href="research.html">Research</a> | <a href="publications.html">Publications</a> | <a href="courses.html">Courses</a> </p>
