--- a/open_positions.html
+++ b/open_positions.html
@@ -90,6 +90,7 @@
        </br>
      <p >
     Youssef Mourchid, CESI LINEACT, CESI, Dijon, France, ymourchid@cesi.fr </br>
+         Ayoub Karine, ISEN, Nantes, France, ayoub.karine@isen-ouest.fr </br>
 
     Anass Nouri, SETIME Laboratory, Faculty of Science, Ibn Tofail University, Kenitra, Morocco, anass.nouri@uit.ac.ma
     <p >
