--- a/courses.html
+++ b/courses.html
@@ -63,7 +63,7 @@
       </div>
       <div id="content">
 
-      <h2>Lectures I'm giving in <a href="https://www.uit.ac.ma" target="_blank">Ibn Tofail University</a> </h2>
+      <h2>Lectures I'm giving all around the world</a> </h2>
       <font size="3">
         <ul>
           <li>Hardware and Software Architecture of Computers </li>
