--- a/open_positions.html
+++ b/open_positions.html
@@ -121,7 +121,7 @@ Ethics and regulations in AI for health
      -->
 </div>
        </br>
-<p>For more informations : https://ipta-conference.com/ipta24/index.php/special-sessions#MLH</p>
+      <!--<p>For more informations : https://ipta-conference.com/ipta24/index.php/special-sessions#MLH</p>  -->
       </div>
     <div id="footer">
       <p><a href="index.html">Home</a> | <a href="research.html">Research</a> | <a href="publications.html">Publications</a> | <a href="courses.html">Courses</a> </p>
