--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Anass Nouri earned his M.Sc. degree in Intelligent Systems and Image Analysis fr
                  Currently, he is an Associate Professor of computer science at Ibn Tofail University of Morocco. He gave lectures in computer programming, image analysis and machine learning. His current research interests include 2D images, 3D mesh/volume processing, visual saliency, objective quality assessment, medical imaging and machine learning. 
                  -->
                   <!--  Currently, he is researcher R&D at Glancy3D. -->
-  <button onclick=" window.open('CV_Anass_Nouri_2024.pdf', '_blank'); return false;">Download My CV <i class="fas fa-file-pdf"> </i> </button> </p>
+ <!--   <button onclick=" window.open('CV_Anass_Nouri_2024.pdf', '_blank'); return false;">Download My CV <i class="fas fa-file-pdf"> </i> </button> </p>-->
               </font>
             
         </div>
