--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 
                       <li id="cl"><b>Anass Nouri</b><br/>
           <font color=#3364FF>Analyse de contenus 3D par Machine et Deep learning : Aide au Diagnostic Médical et Évaluation de la Qualité Perçue.</font> <br>
-          Habilitation Thesis, Ibn Tofail University, Kénitra, Morocco, 29 December <b><b>2022</b></b>. <br>
+          Habilitation Thesis<b><b>2022</b></b>. <br>
           
     
                         <br/> <br/>
