--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Anass Nouri earned his M.Sc. degree in Intelligent Systems and Image Analysis fr
       <div id="contact">
           <h2>Contact</h2>
 
-          <font size="2"><i class="fas fa-envelope"></i></font> <font size="3">: anass.nouri@glancy3d.com </font> </br> </br>   
+          <font size="2"><i class="fas fa-envelope"></i></font> <font size="3">: anassnouri2@gmail.com </font> </br> </br>   
 
           <!--<font size="3"><i class="fas fa-map-marker-alt"></i></font><font size="3">: Kénitra, Morocco</font> </br> </br> -->
        
