--- a/publications.html
+++ b/publications.html
@@ -120,7 +120,10 @@
         <font size="3">
         <ol>
 
-    
+                                <!--  -->
+        <li id="cl">Z. Ibork, <b>A Nouri</b>,O. Lézoray, C. Charrier, R. Touahni <br/>
+        <font color=#3364FF >  No Reference 3D Mesh Quality Assessment learned from Quality Scores on 2D Projections, IEEE Access, Vol. 12, pp. 106924-106936, 2024.  <b><b>2024 (SJR Q1)</b></b> </br>
+         <button class="button"
                             <!--  -->
         <li id="cl">A Missonnier, V L'Allinec, PCD Beaufils, F Autrusseau, <b>A Nouri</b>, et al. <br/>
         <font color=#3364FF > Effects of induced arterial hypertension for vasospasm on unruptured and unsecured cerebral aneurysms (growth and rupture). A retrospective case-control study</font> <br/>
