--- a/publications.html
+++ b/publications.html
@@ -157,7 +157,7 @@
        <!--  -->
         <li id="cl"><b>A. Nouri</b>, C. Charrier, O. Lézoray <br/>
         <font color=#3364FF >A Genetically-based Combination of Visual Saliency and Roughness for F.R. 3D Mesh Quality Assessment - A statistical study</font> <br/>
-        The Computer Journal. <b>2020 (Q2)</b> </br>
+        The Computer Journal. <b>2020 (SJR Q2)</b> </br>
         <button class="button" onClick="javascript: window.open('https://academic.oup.com/comjnl/advance-article/doi/10.1093/comjnl/bxaa089/5893202?guestAccessKey=8a2ddaa0-7ad6-4bf7-8903-39d0eeabd6c0')"> PDF <i class="fas fa-file-pdf"> </i> </button>
        
  
