--- a/publications.html
+++ b/publications.html
@@ -181,7 +181,7 @@
 
         <li id="cl">  <b>Z. Ibork</b>, <b>A. Nouri</b> ,<b>O. Lézoray</b>,     <b>C. Charrier</b>, <b>R. Touahni</b>  <br/>
         <font color=#3364FF > A No Reference Deep Quality Assessment Index for 3D Colored Meshes </font> <br/>
-        in EEE International Conference on Systems, Man, and Cybernetics (SMC - IEEE), pp. to appea <b>2024, to appear</b>.</br>
+        in EEE International Conference on Systems, Man, and Cybernetics (SMC - IEEE), pp. 3305-3311, 2024. <b>2024, CORE Ranking B</b>.</br>
                 <button class="button" onClick="javascript: window.open('SMC_2024')">PDF  <i class="fas fa-file-pdf"> </i> </button>
   
 
