--- a/publications.html
+++ b/publications.html
@@ -182,7 +182,7 @@
         <li id="cl">  <b>Z. Ibork</b>, <b>A. Nouri</b> ,<b>O. Lézoray</b>,     <b>C. Charrier</b>, <b>R. Touahni</b>  <br/>
         <font color=#3364FF > A No Reference Deep Quality Assessment Index for 3D Colored Meshes </font> <br/>
         in EEE International Conference on Systems, Man, and Cybernetics (SMC - IEEE), pp. 3305-3311, 2024. <b>CORE Ranking B</b>.</br>
-                <button class="button" onClick="javascript: window.open('SMC_2024_.pdf')">PDF  <i class="fas fa-file-pdf"> </i> </button>
+                <button class="button" onClick="javascript: window.open('SMC_2024__.pdf')">PDF  <i class="fas fa-file-pdf"> </i> </button>
   
 
         <li id="cl">  <b>A. Nouri</b> ,<b>O. Lézoray</b>,  <b>Z. Ibork</b> , <b>C. Charrier</b>, <b>R. Touahni</b>  <br/>
