--- a/publications.html
+++ b/publications.html
@@ -178,6 +178,14 @@
         <h2>Refereed International Conferences</h2>
         <font size="3">
         <ol>
+ 
+
+          
+                  <li id="cl">  <b>F. Autrusseau</b>, <b>R. Nader</b> ,<b>M. El Hassouni</b>,     <b>A. Nouri</b>, <b>et al.</b>  <br/>
+        <font color=#3364FF >Synthetic vascular image selection for deep learning based cerebral bifurcation classification </font> <br/>
+        in 47th Intl. Conf. of the IEEE Engineering in Medicine and Biology Society (EMBC), Copenhagen, Denmark, 2025 <b>CORE Ranking B</b>.</br>
+                <button class="button" onClick="javascript: window.open('EMBC_2025.pdf')">PDF  <i class="fas fa-file-pdf"> </i> </button>
+  
 
         <li id="cl">  <b>Z. Ibork</b>, <b>A. Nouri</b> ,<b>O. Lézoray</b>,     <b>C. Charrier</b>, <b>R. Touahni</b>  <br/>
         <font color=#3364FF > A No Reference Deep Quality Assessment Index for 3D Colored Meshes </font> <br/>
