--- a/publications.html
+++ b/publications.html
@@ -319,6 +319,14 @@ Intra-Cranial Aneurysm Detection and Segmentation</font> <br/>
         <h2>Refereed French National Conferences</h2>
         <font size="3">
         <ol>
+          
+        <li id="cl"> Z. Ibork, <b>A. Nouri</b> ,O. Lézoray, C. Charrier   <br/>
+        <font color=#3364FF >Un indice d'évaluation sans référence basé sur l'apprentissage profond pour l'évaluation de la qualité des maillages 3D colorés</font> <br/>
+         GRETSI'2025 - Strasbourg - France.  <b>2025 </b>.</br>
+          
+        <li id="cl"> <b>A. Nouri</b> ,O. Lézoray, Z. Ibork, C. Charrier   <br/>
+        <font color=#3364FF >Une approche automatique pour la détection de la saillance visuelle sur des maillages 3D colorés</font> <br/>
+         GRETSI'2025 - Strasbourg - France.  <b>2025 </b>.</br>
 
         <li id="cl"> Z. Ibork, <b>A. Nouri</b>, C. Charrier, O. Lézoray  <br/>
         <font color=#3364FF > Évaluation sans référence de la qualité de maillages 3D par combinaison de prédictions sur projections 2D</font> <br/>
