--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           <li><a href="database.html">Database</a></li>
           <li><a href="open_positions.html">Open Positions/Call of Papers</a></li>
          <li><a href="students.html">Students</a></li>
+          <li><a href="executive_certificate.html">Executive Certificate</a></li>
 
                 
  
@@ -142,4 +143,5 @@ Anass Nouri earned his M.Sc. degree in Intelligent Systems and Image Analysis fr
 
 </body>
 </html>
+
 
