--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
           <li><a href="courses.html">Courses</a></li>
           <li><a href="database.html">Database</a></li>
           <li><a href="open_positions.html">Open Positions/Call of Papers</a></li>
-         <li><a href="students.html">Students</a></li>
-          <li><a href="executive_certificate.html">Executive Certificate</a></li>
+          <li class="menu-center"><a href="students.html">Students</a></li>
+          <li class="menu-center"><a href="executive_certificate.html">Executive Certificate</a></li>
+
 
                 
  
@@ -143,5 +144,6 @@ Anass Nouri earned his M.Sc. degree in Intelligent Systems and Image Analysis fr
 
 </body>
 </html>
+
 
 
