--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <!-- class="logo_colour", allows you to change the colour of the text -->
           <font size="3"><h1><a href="index.html">Anass <span class="logo_colour">Nouri</span></a></h1></font>
         <!-- <font size="2"> <h2>Associate Professor of Computer Science/Vision/I.A, Ibn Tofail University, Kénitra/Morocco</h2></font>-->
-       <font size="2"> <h2>Researcher A.I/Vision</h2></font>
+       <font size="2"> <h2>Associate Professor A.I/Vision</h2></font>
           <!--    <font size="2"> <h2>Researcher R&D at Glancy</h2></font>-->
         </div>
                                                 <div class="img_anass">
@@ -143,6 +143,7 @@ Anass Nouri earned his M.Sc. degree in Intelligent Systems and Image Analysis fr
 
 </body>
 </html>
+
 
 
 
