--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
           <font size="3"><h1><a href="index.html">Anass <span class="logo_colour">Nouri</span></a></h1></font>
-          <font size="2"> <h2>Researcher A.I/Vision</h2></font>
+          <font size="2"> <h2>Associate Professor A.I/Vision</h2></font>
         </div>
       </div>
       <div id="menubar">
@@ -46,6 +46,7 @@
           <li><a href="database.html">Database</a></li>
           <li><a href="open_positions.html">Open Positions/Call of Papers</a></li>
           <li><a href="students.html">Students</a></li>
+          <li><a href="executive_certificate.html">Executive Certificate</a></li>
          
         </ul>
       </div>
@@ -459,5 +460,6 @@ Intra-Cranial Aneurysm Detection and Segmentation</font> <br/>
   </div>
 </body>
 </html>
+
 
 
