--- a/executive_certificate.html
+++ b/executive_certificate.html
@@ -176,7 +176,7 @@
                 <p style="color: var(--text-muted); margin-bottom: 40px;">
                     Secure your spot in the upcoming cohort. Seats are limited to ensure personalized attention.
                 </p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSxxxx/viewform" target="_blank" class="btn-gold"
+                <a href="https://forms.gle/BA69bDxt161GW2z89" target="_blank" class="btn-gold"
                     style="font-size: 1.1rem; padding: 18px 40px;">
                     Register
                 </a>
