--- a/executive_certificate.html
+++ b/executive_certificate.html
@@ -184,7 +184,7 @@
             <div class="registration-box">
                 <h2 class="section-title" style="margin-bottom: 20px;">Ready to Transform Your Career?</h2>
                 <p style="color: var(--text-muted); margin-bottom: 40px;">
-                    Secure your spot in the upcoming cohort. Seats are limited to ensure personalized attention.
+                    Secure your spot in the upcoming cohort. Seats are limited to ensure personalized attention. The tranning payment can be split into 2 months.
                 </p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSxxxx/viewform" target="_blank" class="btn-gold"
                     style="font-size: 1.1rem; padding: 18px 40px;">
